--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,14 +6,16 @@
 
         <div th:replace="fragments :: page-header"></div>
 
-        <div th:style="'color:#2929ff;'" class="container body-content">
-            <h2>View jobs by:</h2>
-            <ul>
-                <li th:each="action : ${actions}" th:style="'color:#2929ff;font-size:18px;'">
-                    <a th:href="@{'/' + ${action.key}}" th:text="${action.value}"></a>
-                </li>
-            </ul>
-        </div>
+        <div th:replace="fragments :: index-page"></div>
+
+<!--        <div th:style="'color:#2929ff;'" class="container body-content">-->
+<!--            <h2>View jobs by:</h2>-->
+<!--            <ul>-->
+<!--                <li th:each="action : ${actions}" th:style="'color:#2929ff;font-size:18px;'">-->
+<!--                    <a th:href="@{'/' + ${action.key}}" th:text="${action.value}"></a>-->
+<!--                </li>-->
+<!--            </ul>-->
+<!--        </div>-->
 
     </body>
 
